[project]
name = "pokegpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "jinja2>=3.1.6",
    "mss>=10.2.0",
    "openai>=2.41.1",
    "opencv-python-headless>=4.13.0.92",
    "pyautogui>=0.9.54",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
    "vllm>=0.23.0",
    "websockets>=16.0",
]

[[tool.uv.index]]
url = "https://wheels.vllm.ai/nightly"
